# culturasp-adapter

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  pendencias.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  frontend.yml  release.yml  security.yml
adr/0001-stack-e-deploy/: index.html
api/: index.html
architecture/: index.html
backup_dr/: index.html
compliance/: index.html
data_model/: index.html
deployment/: index.html
docs/: adding_a_source.md  api.md  api_reference.md  architecture.md  backup_dr.md  compliance.md  data_model.md  deployment.md  design_brief.md  ethics.md  index.md  openapi.json  sources_infantil.md
docs/adr/: 0001-stack-e-deploy.md
docs/design_handoff_culturasp_portal/: CulturaSP.dc.html  Event Card.dc.html  README.md
ethics/: index.html
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: a11y.test.tsx  main.tsx  router.tsx
frontend/src/app/: theme.test.tsx  theme.tsx  toast.tsx
frontend/src/components/: EventCard.test.tsx  EventCard.tsx  Footer.tsx  Header.tsx  Layout.tsx  LeaveModal.tsx  states.tsx
frontend/src/lib/: adapter.test.ts  adapter.ts  api.ts  format.ts  i18n.test.ts  i18n.ts  icons.tsx  queries.ts  types.ts
frontend/src/routes/: Accessibility.tsx  Detail.tsx  Dev.test.tsx  Dev.tsx  Home.tsx  Kit.tsx  List.tsx  Stubs.tsx  Subscribe.test.tsx  Subscribe.tsx
frontend/src/styles/: global.css  tokens.css
frontend/src/test/: factory.ts  setup.ts  vitest-axe.d.ts
infrastructure/: README.md
scripts/: capture_fixture.py  deploy_vps.sh  e2e_serve_seeded.py  export_openapi.py
search/: search_index.json
src/culturasp/: __init__.py
src/culturasp/api/: deps.py  feeds.py  main.py
src/culturasp/cache/: __init__.py  redis_cache.py
src/culturasp/core/: config.py  exceptions.py  logging.py
src/culturasp/db/: __init__.py  models.py  provider.py  repository.py  session.py
src/culturasp/models/: __init__.py  accessibility.py  event.py  jsonld.py
tests/: conftest.py
tests/e2e/: test_pipeline.py  test_pipeline_ocr.py
tests/fixtures/: sala_sp_concert.html  sala_sp_listing.html  sesc_filter.json
tests/integration/: test_api.py
tests/real/: test_real_fixtures.py
tests/unit/: test_browser_proxy.py  test_common.py  test_feeds.py  test_fetcher.py  test_jsonld.py  test_monitoring.py  test_pdf_ocr.py  test_pinacoteca_parser.py  test_robots.py  test_sala_sp_parser.py  test_scheduler.py  test_sesc_parser.py  test_sesc_sp_parser.py
(+24 files in other folders)
