[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "culturasp-adapter"
version = "0.1.0"
description = "Open source read-only adapter for São Paulo's public cultural data — scrapes, structures (JSON-LD/schema.org) and exposes events via a REST API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Daniel Lau Pereira Soares" }]
keywords = ["culture", "open-data", "scraping", "schema.org", "json-ld", "sao-paulo", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "playwright>=1.43",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "dateparser>=1.2",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "apscheduler>=3.10",
    "slowapi>=0.1.9",
    "ics>=0.7.2",
    "feedgen>=1.0",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.17",
    "pillow>=10.3",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-dateparser",
    "pre-commit>=3.7",
]

[project.scripts]
culturasp-scrape = "culturasp.scraper.cli:main"

[project.urls]
Homepage = "https://github.com/danzeroum/culturasp-adapter"
Repository = "https://github.com/danzeroum/culturasp-adapter"
Issues = "https://github.com/danzeroum/culturasp-adapter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/culturasp"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# E501: line length handled by formatter. B008: Depends()/Query() in defaults is
# the FastAPI idiom, not a bug.
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["culturasp"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
packages = ["culturasp"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "integration: tests that need Postgres/Redis services",
    "e2e: full pipeline tests against saved fixtures",
]

[tool.coverage.run]
source = ["culturasp"]
branch = true
